sass/main.scss
@import '../node_modules/bootstrap/scss/mixins/size';

.main-page {
    background: url(../img/main-page/bg-grid.png) no-repeat;/*
    min-height: 370px;*/
    &-drunk-guys {
        object-fit: contain;
    }
    &-info-block {
        & > .col-12:not(:last-child) {
            border-right: 1px solid rgba(182,182,182, .26);
        }
    }
    &-widget-block {
        box-shadow: inset 2px 7px 13px 1px rgba(67, 67, 67, .19);

        figure {
            min-height: 265px;
        }
        @mixin arrow {
            border-left: 1px solid var(--green);
            border-top: 1px solid var(--green);
            @include size(32px);
            position: absolute;
            background: #fff;
            display: block;
            content: '';
            z-index: 1;
        }
        &-free-consulting,
        &-register,
        &-part-of {
            &:hover:after {
                @include arrow;
                bottom: calc(-16px + -48px);
                transform: rotate(45deg);
            }
        }
        
        &-free-consulting {
            &:hover:after {
                @media (max-width: map-get($grid-breakpoints, 'lg')) {
                    bottom: calc(100% + 32px);
                    transform: rotate(-135deg);
                }
            }
        }
        
        &-security,
        &-support {
            &:hover:before {
                @include arrow;
                bottom: calc(100% + 32px);
                transform: rotate(-135deg);
            }
        }
    }
    &-conditions {
        border-width: 2px;

        > p:not(:first-child),
        figure:hover ~ & > p {
            display: none;
        }

        p {
            min-height: 7rem;
            display: flex;
        }

        @for $i from 1 through 5 {
            figure:nth-child(#{$i}):hover ~ & > p:nth-child(#{$i}) {
                display: flex;
            }
        }
    }
    
    &-top-categories {
        &-list {
            & > li:not(:last-child) {
                background: url(../img/main-page/split-category.svg) #fff no-repeat;
                box-shadow: 0 7px 24px 0 rgba(0, 0, 0, .13);
                min-height: 150px;
                &:hover {
                    box-shadow: 0 7px 32px 0 rgba(0, 0, 0, .33);
                    background-color: var(--green);
                    color: #fff;
                }
            }
        }
        
        &-work {/*
            background: url(../img/main-page/split-category.svg) no-repeat;*/
        }
        &-goods {
        
        }
        &-oil {
        
        }
        &-chemistry {
        
        }
        &-items {
        
        }
        &-tech {
        
        }
        &-furniture {
        
        }
        &-services {
        
        }
        &-agricultural {
        
        }
        
    }
    
    &-top-procurement {
        background: url(../img/main-page/bg-grid-green.png) no-repeat;
        background-size: cover;
    }
    &-results {
        &-header{
            grid-template-columns: 150px minmax(150px, auto) 120px 150px 2rem;
            grid-column-gap: 1.5rem;
            @media (max-width: map-get($grid-breakpoints, 'md')) {
                grid-template-columns: auto;
            }
        }
        &-grid {
            grid-template-columns: 150px minmax(150px, auto) 120px 150px 2rem;
            grid-gap: 1.5rem;
            @media (max-width: map-get($grid-breakpoints, 'md')) {
                grid-template-columns: auto;
            }
            &:not(header):hover {
                background-color: #F6F6F6;
            }
        }
        &-clock {
            grid-template-columns: min-content auto;
            grid-gap: 10px;
            &:before {
                background-image: url(../img/main-page/clock.svg);
                background-size: contain;
                @include size(1rem);
                content: '';
            }
        }
        &-star {
            clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
            background: #C6C6C6;
            @include size(2rem);
            &:before {
                clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
                background: var(--white);
                transform: scale(.7);
                @include size(2rem);
                position: absolute;
                display: block;
                content: '';
            }
            &-favorite {
                background: var(--yellow);
                &:before { display: none }
            }
        }
    }

    &-results-status {
        background-image: linear-gradient(to right, transparent 0%, transparent 90%, var(--white) 90%, var(--white) 100%);
        background-position: 2px 0;
        height: 3px;
        &.bg-treaty {
            background-size: 20%;
        }

        &.bg-suggestion {
            background-size: 50%;
        }
        
        &.bg-reviewed {
            background-size: 25%;
        }
        &.bg-trading {
            background-size: calc(100% / 3);
        }
    }
}

